@@ -7,6 +7,7 @@ Corrections:
 - Deletion of Auto-Hide docks, not working with Qt 4.2
 Adds:
 - Modification of the class browser to understand functions overloading.
+- When a project is closed, the content of class browser is saved in database symbols.db. With this database, the content is reloaded very quickly during the loading of the project. This feature require to have the SQL driver sqlite enable. On build enter the option -qt-sql-sqlite after the configure command.
 - Moving tabs with mouse to switch between us
 - Detection when a file was modified by another program and ask for save or reload.
 - Three tabs to show debugged variables program. Deletion of line edit "Debug command", obsolete with new tabs.
